Added docker and fixed some issues

--- a/static/index.html
+++ b/static/index.html
@@ -8,12 +8,12 @@
   </head>
 
   <h1>ROB BOT</h1> 
-  <h4> All the knoledge of Rob but more fun to speak to!</h4>
-  <!-- <input type="text" id="userName" placeholder="Enter User Name"  maxlength="25" requiered tabindex="1"> -->
+  <h4> All the knowledge of Rob but more fun to speak to!</h4>
+  <!-- <input type="text" id="userName" placeholder="Enter User Name"  maxlength="25" required tabindex="1"> -->
 
   <div id="testMessage"> </div>
 
-  <input type="text" id="userInput" placeholder="Type question, follwed by return" tabindex="2">
+  <input type="text" id="userInput" placeholder="Type question, followed by return" tabindex="2">
 
 </html>
 <script>
